// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`avoid hanging on loops 1`] = `
{
  "1": {
    "input": {},
    "status": "idle",
  },
  "n1": {
    "input": {
      "template": "Hello {{World}}",
    },
  },
}
`;

exports[`can handle input from multiple origins 1`] = `
{
  "1": {
    "input": {
      "template": "This is a test!",
    },
    "status": "idle",
  },
  "n1": {
    "input": {
      "template": "Hello {{World}}",
    },
  },
  "n2": {
    "input": {
      "template": "Hello {{World}}",
    },
  },
  "n3": {
    "input": {
      "completion": "Hello {{World}} (PARSED)",
      "prompt": "Hello {{World}}",
    },
  },
}
`;

exports[`can handle missing states 1`] = `
{
  "n2": {
    "input": {
      "template": "Hello {{World}}",
    },
  },
  "n3": {
    "input": {
      "prompt": "Hello {{World}} (PARSED)",
      "template": "This is a test!",
    },
    "status": "idle",
  },
  "n4": {
    "input": {
      "completion": "Hello {{World}} (PARSED) (COMPLETION)",
      "prompt": "Hello {{World}} (PARSED)",
    },
  },
}
`;

exports[`can resolve variables correctly 1`] = `
{
  "n1": {
    "input": {
      "template": "\${{ps:ref:file:MY_FILE}} {{keep}}",
    },
    "status": "idle",
  },
  "n2": {
    "input": {
      "template": "INSERTED_FILE {{keep}}",
      "variables": [],
    },
    "status": "idle",
  },
  "n3": {
    "input": {
      "prompt": "INSERTED_FILE {{keep}} (PARSED)",
      "template": "",
    },
    "status": "idle",
  },
}
`;

exports[`ignore autorun=false flag on root node 1`] = `
{
  "n1": {
    "input": {
      "template": "Hello {{World}}",
    },
    "status": "idle",
  },
  "n2": {
    "input": {
      "template": "Hello {{World}}",
      "variables": [
        {
          "defaultValue": "mars",
          "description": "",
          "id": "World",
          "name": "World",
          "type": "text",
        },
      ],
    },
    "status": "idle",
  },
  "n3": {
    "input": {
      "completion": "",
      "prompt": "Hello {{World}} (PARSED)",
    },
    "status": "idle",
  },
}
`;

exports[`nodes with autorun=false down the chain do not update the inputs of their targets 1`] = `
{
  "n1": {
    "input": {
      "template": "Hello {{World}}",
    },
    "status": "idle",
  },
  "n2": {
    "input": {
      "template": "Hello {{World}}",
      "variables": [
        {
          "defaultValue": "mars",
          "description": "",
          "id": "World",
          "name": "World",
          "type": "text",
        },
      ],
    },
    "status": "idle",
  },
  "n3": {
    "input": {},
    "status": "idle",
  },
}
`;

exports[`set input for several nodes in the editor 1`] = `
{
  "n1": {
    "input": {
      "template": "Hello {{World}}",
    },
    "status": "idle",
  },
  "n2": {
    "input": {
      "template": "Hello {{World}}",
      "variables": [
        {
          "defaultValue": "mars",
          "description": "",
          "id": "World",
          "name": "World",
          "type": "text",
        },
      ],
    },
    "status": "idle",
  },
  "n3": {
    "input": {
      "prompt": "Hello {{World}} (PARSED)",
      "template": "",
    },
    "status": "idle",
  },
}
`;

exports[`set input for single node in the editor 1`] = `
{
  "1": {
    "input": {
      "template": "Hello World",
    },
    "status": "idle",
  },
}
`;

exports[`update array variables 1`] = `
{
  "n1": {
    "input": {},
    "status": "idle",
  },
  "n2": {
    "input": {
      "template": "",
      "variables": [
        {
          "defaultValue": "test1",
          "description": "",
          "id": "world",
          "name": "world",
          "type": "text",
        },
        {
          "defaultValue": "test2",
          "description": "",
          "id": "hello",
          "name": "hello",
          "type": "text",
        },
      ],
    },
    "status": "idle",
  },
  "n3": {
    "input": {
      "prompt": " (PARSED)",
      "template": "",
    },
    "status": "idle",
  },
}
`;
